[package]
name = "ads_client"
version = "1.2.1"
edition = "2021"
authors = ["Stephan Avenwedde <s.avenwedde@gmail.com>"]
license = "MIT"
readme = "README.md"
repository = "https://github.com/hANSIc99/ads_client"
description = """
An asynchronous, non-blocking ADS client
"""
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
categories = ["asynchronous", "network-programming", "science", "api-bindings"]
keywords = ["Beckhoff", "ADS", "automation", "device", "PLC"]


[dependencies]
tokio = { version =  "1.19.2", features = ["rt", "rt-multi-thread", "net", "io-util", "macros"] }
bytes = "1.1.0"