[package]
name = "ads_client"
version = "1.6.0"
edition = "2021"
authors = ["Stephan Avenwedde <s.avenwedde@gmail.com>"]
license = "MIT"
readme = "README.md"
repository = "https://github.com/hANSIc99/ads_client"
description = """
An asynchronous, non-blocking ADS client
"""
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
categories = ["asynchronous", "network-programming", "science", "api-bindings"]
keywords = ["Beckhoff", "ADS", "automation", "device", "PLC"]


[dependencies]
tokio = { version =  "1.19.2", features = ["rt", "rt-multi-thread", "net", "io-util", "macros"] }
bytes = "1.5.0"
log = { version = "0.4.20", features = ["max_level_trace", "release_max_level_warn"]}
num_enum = "0.7.2"

[dev-dependencies] 
log4rs = "1.3.0"
